--- a/src/my-app.html
+++ b/src/my-app.html
@@ -480,7 +480,8 @@ cd<link rel="import" href="../bower_components/polymer/polymer.html" />
             page="[[page]]"
             home="[[home]]"
             name="def-home"
-            signed-in="[[signedIn]]">
+            signed-in="[[signedIn]]"
+            from-login="{{fromLogin}}">
           </def-home>
           <!--default page if not verified-->
           <def-verify
@@ -499,6 +500,15 @@ cd<link rel="import" href="../bower_components/polymer/polymer.html" />
             home="[[home]]"
             name="def-account">
           </def-account>
+
+          <def-terms
+            current-page="[[currentPage]]"
+            current-cat="[[currentCat]]"
+            intended-cat="[[intendedCat]]"
+            page="[[page]]"
+            home="[[home]]"
+            name="def-terms">
+          </def-terms>
           <!--error 404 page-->
           <def-error
             current-page="[[currentPage]]"
@@ -734,6 +744,7 @@ cd<link rel="import" href="../bower_components/polymer/polymer.html" />
       id="mainToast"
       class="fit-bottom"
       duration="15000">
+      <a style="color:yellow;" hidden$=[[termsHidden]] href="/[[home]]/default/def-terms">See Terms</a>
       <paper-button on-tap="_closeToast">close</paper-button>
     </paper-toast>
 
@@ -900,6 +911,12 @@ cd<link rel="import" href="../bower_components/polymer/polymer.html" />
         login:{
           type:Object,
         },
+
+        fromLogin: {
+          type: Boolean,
+          value: false
+        },
+
         payments:{
           type:Object,
         },
@@ -1027,7 +1044,11 @@ cd<link rel="import" href="../bower_components/polymer/polymer.html" />
           .then(function(user){
             this.$.userIndexDB.getStoredValue("/userIndex/"+user.uid+"/home")
               .then(function(value){
-                window.location="/"+value+"/default/def-home";
+                this.set("homeData.home", value);
+                this.set("catData.category", "default");
+                this.set("pageData.page", "def-home");
+                this.fromLogin = true;
+                //window.location="/"+value+"/default/def-home";
               }.bind(this))
             //this.fire('signInRedirect');
           }.bind(this))
@@ -1108,6 +1129,11 @@ cd<link rel="import" href="../bower_components/polymer/polymer.html" />
       },
       openToast:function(e){
         this.$.mainToast.text=e.detail.toastText;
+        if(e.detail.terms) {
+          this.termsHidden = false;
+        } else {
+          this.termsHidden = true;
+        }
         this.$.mainToast.open();
       },
       _closeToast:function(){
